--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ asgiref==3.5.2
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
+cloudinary==1.30.0
 cryptography==38.0.1
 defusedxml==0.7.1
 dj-database-url==1.0.0
 dj-rest-auth==2.2.5
+dj3-cloudinary-storage==0.0.6
 Django==3.2.16
 django-allauth==0.51.0
 djangorestframework==3.14.0
@@ -20,6 +22,7 @@ python3-openid==3.2.0
 pytz==2022.4
 requests==2.28.1
 requests-oauthlib==1.3.1
+six==1.16.0
 sqlparse==0.4.3
 types-cryptography==3.3.23
 urllib3==1.26.12
