--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,14 @@ dj-rest-auth==2.2.5
 dj3-cloudinary-storage==0.0.6
 Django==3.2.16
 django-allauth==0.51.0
+django-cors-headers==3.13.0
+django-filter==22.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.1
 gunicorn==20.1.0
 idna==3.4
 oauthlib==3.2.1
+Pillow==9.2.0
 psycopg2==2.9.4
 pycparser==2.21
 PyJWT==2.5.0
