--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
 cloudinary==1.30.0
+coverage==6.5.0
 cryptography==38.0.1
 defusedxml==0.7.1
 dj-database-url==1.0.0
